--- a/src/View/LoginForm.fxml
+++ b/src/View/LoginForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -7,6 +8,11 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginFormController">
    <children>
+      <Label layoutX="183.0" layoutY="42.0" text="Connexion">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
       <Label layoutX="165.0" layoutY="121.0" text="Identifiant" />
       <TextField fx:id="usernameTextField" layoutX="165.0" layoutY="148.0" />
       <Label layoutX="165.0" layoutY="199.0" text="Mot de passe" />
