--- a/src/View/Home.fxml
+++ b/src/View/Home.fxml
@@ -1,17 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="400.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.HomeController">
    <left>
-      <VBox id="menu" prefHeight="200.0" prefWidth="100.0" stylesheets="@Style/HomeMenu.css" BorderPane.alignment="CENTER">
+      <VBox prefHeight="400.0" prefWidth="200.0" style="-fx-background-color: #30415d;" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Button" />
-            <Button mnemonicParsing="false" text="Button" />
-            <Button mnemonicParsing="false" text="Button" />
+            <JFXButton onAction="#handleUI1" prefHeight="25.0" prefWidth="301.0" text="User Interface 1" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="5.0" top="5.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="15.0" top="15.0" />
+               </padding></JFXButton>
+            <JFXButton onAction="#handleUI2" prefHeight="25.0" prefWidth="393.0" text="User Interface 2" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="5.0" top="5.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="15.0" top="15.0" />
+               </padding></JFXButton>
+            <JFXButton onAction="#handleUI3" prefHeight="25.0" prefWidth="413.0" text="User Interface 3" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="5.0" top="5.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="15.0" top="15.0" />
+               </padding></JFXButton>
+            <JFXButton onAction="#handleExit" prefHeight="25.0" prefWidth="271.0" text="Exit" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="5.0" top="5.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="15.0" top="15.0" />
+               </padding>
+            </JFXButton>
          </children>
       </VBox>
    </left>
