--- a/src/View/Home.fxml
+++ b/src/View/Home.fxml
@@ -24,7 +24,7 @@
                <padding>
                   <Insets bottom="15.0" top="15.0" />
                </padding></JFXButton>
-            <JFXButton onAction="#handleEmployees" prefHeight="25.0" prefWidth="413.0" text="Employes" textFill="WHITE">
+            <JFXButton fx:id="employeesButton" onAction="#handleEmployees" prefHeight="25.0" prefWidth="413.0" text="Employes" textFill="WHITE">
                <VBox.margin>
                   <Insets bottom="5.0" top="5.0" />
                </VBox.margin>
