--- a/src/View/FeaturesInterfaces/Employees.fxml
+++ b/src/View/FeaturesInterfaces/Employees.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import com.jfoenix.controls.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -8,6 +9,13 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Menu.EmployeesController">
    <center>
-      <JFXTreeTableView fx:id="treeTableView" BorderPane.alignment="CENTER" />
+      <JFXTreeTableView fx:id="employeesTreeTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER" />
    </center>
+   <top>
+      <JFXTextField fx:id="searchInput" promptText="Recherche" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="20.0" />
+         </BorderPane.margin>
+      </JFXTextField>
+   </top>
 </BorderPane>
