--- a/src/View/FeaturesInterfaces/NoAccess.fxml
+++ b/src/View/FeaturesInterfaces/NoAccess.fxml
@@ -10,7 +10,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Text fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="No permission. Please contact an administrator." BorderPane.alignment="CENTER">
+      <Text fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Vous n'avez pas accès. Veuillez contacter un administrateur." BorderPane.alignment="CENTER">
          <font>
             <Font size="23.0" />
          </font>
