--- a/src/View/Dialog/RoomDialog.fxml
+++ b/src/View/Dialog/RoomDialog.fxml
@@ -2,23 +2,32 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDialogLayout?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<JFXDialogLayout fx:id="dialogLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Dialog.RoomDialogController">
+<JFXDialogLayout fx:id="dialogLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="521.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Dialog.RoomDialogController">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane prefHeight="400.0" prefWidth="517.0">
          <children>
-            <JFXButton layoutX="174.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleAddRoomButtonAction" style="-fx-background-color: #30415D;" text="Ajouter" textFill="WHITE">
+            <JFXButton layoutX="123.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleAddRoomButtonAction" style="-fx-background-color: #30415D;" text="Ajouter" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                </padding>
             </JFXButton>
-            <JFXButton layoutX="319.0" layoutY="312.0" mnemonicParsing="false" onAction="#handleCancelButtonAction" style="-fx-background-color: #30415D;" text="Annuler" textFill="WHITE">
+            <JFXButton layoutX="283.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleCancelButtonAction" style="-fx-background-color: #30415D;" text="Annuler" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                </padding>
             </JFXButton>
+            <Label fx:id="numRoomLabel" layoutX="85.0" layoutY="75.0" text="Numéro de chambre" />
+            <JFXTextField fx:id="numRoomTextField" layoutX="268.0" layoutY="70.0" prefHeight="31.0" prefWidth="179.0" />
+            <Label fx:id="priceLabel" layoutX="132.0" layoutY="139.0" text="Prix de la nuit" />
+            <JFXTextField fx:id="priceTextField" layoutX="268.0" layoutY="134.0" prefHeight="31.0" prefWidth="179.0" />
+            <Label fx:id="nbGuestsLabel" layoutX="75.0" layoutY="201.0" text="Nombre de personnes" />
+            <JFXTextField fx:id="nbGuestsTextField" layoutX="268.0" layoutY="196.0" prefHeight="31.0" prefWidth="179.0" />
+            <Label fx:id="errorLabel" layoutX="238.0" layoutY="376.0" text="Label" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
          </children></AnchorPane>
    </children>
 </JFXDialogLayout>
