--- a/src/View/FeaturesInterfaces/Rooms.fxml
+++ b/src/View/FeaturesInterfaces/Rooms.fxml
@@ -26,7 +26,12 @@
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding></JFXButton>
       <JFXTreeTableView fx:id="roomsTreeTableView" layoutX="54.0" layoutY="308.0" prefHeight="305.0" prefWidth="788.0" />
-      <JFXButton layoutX="357.0" layoutY="630.0" mnemonicParsing="false" onAction="#handleNewRoomButtonAction" style="-fx-background-color: #30415D;" text="Nouvelle chambre" textFill="WHITE">
+      <JFXButton layoutX="54.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleNewRoomButtonAction" style="-fx-background-color: #30415D;" text="Nouvelle chambre" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
+      <JFXButton fx:id="modifyRoomButton" disable="true" layoutX="267.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleModifyRoomButtonAction" style="-fx-background-color: #30415D;" text="Modifier" textFill="WHITE">
          <padding>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding>
