--- a/src/View/Dialog/EmployeeDialog.fxml
+++ b/src/View/Dialog/EmployeeDialog.fxml
@@ -17,7 +17,7 @@
                   <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                </padding>
             </JFXButton>
-            <JFXButton layoutX="324.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleAddEmployeeButtonAction" style="-fx-background-color: #30415D;" text="Ajouter" textFill="WHITE">
+            <JFXButton fx:id="actionButton" layoutX="324.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleAddEmployeeButtonAction" style="-fx-background-color: #30415D;" text="Ajouter" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                </padding>
@@ -26,11 +26,12 @@
             <JFXTextField fx:id="firstNameTextField" layoutX="259.0" layoutY="100.0" prefHeight="31.0" prefWidth="179.0" />
             <JFXTextField fx:id="lastNameTextField" layoutX="259.0" layoutY="138.0" prefHeight="31.0" prefWidth="179.0" />
             <JFXTextField fx:id="salaryTextField" layoutX="259.0" layoutY="177.0" prefHeight="31.0" prefWidth="179.0" />
-            <JFXComboBox fx:id="roleChoice" layoutX="259.0" layoutY="223.0" prefHeight="31.0" prefWidth="179.0" promptText="Rôle de l'employé" />
+            <JFXComboBox fx:id="roleChoice" layoutX="259.0" layoutY="216.0" prefHeight="31.0" prefWidth="179.0" />
             <Label fx:id="usernameLabel" layoutX="163.0" layoutY="67.0" text="Identifiant" />
             <Label fx:id="firstNameLabel" layoutX="181.0" layoutY="107.0" text="Prénom" />
             <Label fx:id="lastNameLabel" layoutX="197.0" layoutY="146.0" text="Nom" />
             <Label fx:id="salaryLabel" layoutX="181.0" layoutY="185.0" text="Salaire" />
+            <Label fx:id="roleLabel" layoutX="109.0" layoutY="224.0" text="Rôle de l'employé" />
             <Label fx:id="errorLabel" prefHeight="34.0" prefWidth="602.0" text="Label" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
          </children>
       </AnchorPane>
