--- a/src/View/FeaturesInterfaces/Employees.fxml
+++ b/src/View/FeaturesInterfaces/Employees.fxml
@@ -17,9 +17,14 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <JFXButton layoutX="381.0" layoutY="507.0" onAction="#addNewEmployee" style="-fx-background-color: #30415d;" text="Nouvel employé" textAlignment="CENTER" textFill="WHITE">
+      <JFXButton layoutX="18.0" layoutY="493.0" onAction="#addNewEmployee" style="-fx-background-color: #30415d;" text="Nouvel employé" textAlignment="CENTER" textFill="WHITE">
          <padding>
             <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
          </padding></JFXButton>
+      <JFXButton fx:id="modifyEmployeeButton" disable="true" layoutX="218.0" layoutY="493.0" mnemonicParsing="false" onAction="#handleModifyEmployeeButtonAction" style="-fx-background-color: #30415D;" text="Modifier" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
    </children>
 </AnchorPane>
