--- a/src/View/FeaturesInterfaces/Reservation.fxml
+++ b/src/View/FeaturesInterfaces/Reservation.fxml
@@ -1,8 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Menu.ReservationsController" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Menu.ReservationsController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="269.0" layoutX="53.0" layoutY="22.0" stroke="WHITE" strokeType="INSIDE" width="857.0" />
+      <JFXDatePicker fx:id="reservationDatePicker" layoutX="78.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de réservation" />
+      <JFXDatePicker fx:id="startDatePicker" layoutX="326.0" layoutY="108.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de début" />
+      <JFXDatePicker fx:id="endDatePicker" layoutX="326.0" layoutY="157.0" prefHeight="31.0" prefWidth="216.0" promptText="Date de fin" />
+      <JFXComboBox fx:id="employeeComboBox" layoutX="559.0" layoutY="108.0" prefWidth="150.0" promptText="Employé" />
+      <JFXComboBox fx:id="clientComboBox" layoutX="737.0" layoutY="108.0" prefWidth="150.0" promptText="Client" />
+      <Label layoutX="399.0" layoutY="43.0" text="Filtrer les réservations">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </Label>
+      <JFXButton layoutX="451.0" layoutY="223.0" mnemonicParsing="false" onAction="#handleFilterButtonAction" style="-fx-background-color: #30415D;" text="Filtrer" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding></JFXButton>
+      <JFXTreeTableView fx:id="reservationsTreeTableView" layoutX="54.0" layoutY="308.0" prefHeight="305.0" prefWidth="857.0" />
+      <JFXButton layoutX="54.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleNewReservationButtonAction" style="-fx-background-color: #30415D;" text="Nouvelle réservation" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
+      <JFXButton fx:id="modifyReservationButton" disable="true" layoutX="267.0" layoutY="632.0" mnemonicParsing="false" onAction="#handleModifyReservationButtonAction" style="-fx-background-color: #30415D;" text="Modifier" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
+   </children>
+</AnchorPane>
