--- a/src/View/FeaturesInterfaces/Account.fxml
+++ b/src/View/FeaturesInterfaces/Account.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -7,12 +9,33 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Menu.AccountController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="220.0" layoutX="88.0" layoutY="40.0" stroke="WHITE" strokeType="INSIDE" width="902.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="306.0" layoutX="88.0" layoutY="40.0" stroke="WHITE" strokeType="INSIDE" width="902.0" />
       <Label layoutX="448.0" layoutY="68.0" text="Mes informations">
          <font>
             <Font size="21.0" />
          </font></Label>
-      <Label fx:id="firstNameLabel" layoutX="153.0" layoutY="142.0" />
-      <Label fx:id="lastNameLabel" layoutX="163.0" layoutY="152.0" />
+      <Label fx:id="firstNameLabel" layoutX="153.0" layoutY="142.0" text="Prénom : ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lastNameLabel" layoutX="153.0" layoutY="170.0" text="Nom : ">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="roleLabel" layoutX="153.0" layoutY="200.0" text="Rôle : ">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="usernameLabel" layoutX="153.0" layoutY="228.0" text="Identifiant : ">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <JFXButton layoutX="153.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleModifyPassword" style="-fx-background-color: #30415d;" text="Modifier mon mot de passe" textFill="WHITE">
+         <padding>
+            <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+         </padding>
+      </JFXButton>
    </children>
 </AnchorPane>
